[package]
name = "sde-sandbox-cli"
version = "0.0.1"
authors = ["stan <stanislav@yarmonov.pro>"]
edition = "2018"

[dependencies]
sde-specs = { path = "../specs" }
sde-specs-macro = { path = "../specs-macro" }
sde-sandbox-macro = { path = "../sandbox-macro" }
syn = { version = "1.0.11", features = ["full", "extra-traits"] }
proc-macro2 = "1.0.6"
quote = "1.0.2"